cluster-export/namespaces/default/ingresses.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx"},"name":"shop-ingress","namespace":"default"},"spec":{"rules":[{"host":"shop.devops1988.website","http":{"paths":[{"backend":{"service":{"name":"frontend","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
      kubernetes.io/ingress.class: nginx
    creationTimestamp: "2026-09-06T15:52:51Z"
    generation: 1
    name: shop-ingress
    namespace: default
    resourceVersion: "1926547"
    uid: a27f65fe-d5a0-4f78-b4a5-361e593b343e
  spec:
    rules:
    - host: shop.devops1988.website
      http:
        paths:
        - backend:
            service:
              name: frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
